namespaced/eg-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  generation: 1
  labels:
    app.gateway.envoyproxy.io/name: envoy
    gateway.envoyproxy.io/owning-gateway-name: eg
    gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway-system-1
  name: envoy-envoy-gateway-system-1-eg
  namespace: envoy-gateway-system-1
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.gateway.envoyproxy.io/name: envoy
      gateway.envoyproxy.io/owning-gateway-name: eg
      gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway-system-1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.gateway.envoyproxy.io/name: envoy
        gateway.envoyproxy.io/owning-gateway-name: eg
        gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway-system-1
    spec:
      automountServiceAccountToken: false
      containers:
      - args:
        - --service-cluster envoy-gateway-system-1-eg
        - --service-node $(ENVOY_POD_NAME)
        - |
          [...]
        - --log-level info
        command:
        - envoy
        image: envoyproxy/envoy:v1.23-latest
        imagePullPolicy: IfNotPresent
        name: envoy
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8443
          name: https
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /certs
          name: certs
          readOnly: true
        - mountPath: /sds
          name: sds
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: envoy-envoy-gateway-system-1-eg
      serviceAccountName: envoy-envoy-gateway-system-1-eg
      terminationGracePeriodSeconds: 300
      volumes:
      - name: certs
        secret:
          defaultMode: 420
          secretName: envoy
      - configMap:
          defaultMode: 420
          items:
          - key: xds-trusted-ca.json
            path: xds-trusted-ca.json
          - key: xds-certificate.json
            path: xds-certificate.json
          name: envoy-envoy-gateway-system-1-eg
          optional: false
        name: sds
